--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt-contrib-clean": "^0.4.1",
     "grunt-contrib-coffee": "^0.7.0",
     "grunt-contrib-concat": "^0.3.0",
+    "grunt-contrib-connect": "^0.10.1",
     "grunt-contrib-copy": "^0.4.1",
     "grunt-contrib-jshint": "^0.4.3",
     "grunt-contrib-less": "~0.11.0",
